WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171587
Web Inspector: 404 Image Load does not appear as a failure in Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=171587
Summary
Web Inspector: 404 Image Load does not appear as a failure in Web Inspector
Joseph Pecoraro
Reported
2017-05-02 18:09:10 PDT
404 Image Load does not appear as a failure in Web Inspector Test: <img src="DOES-NOT-EXIST.png"> Steps to Reproduce: 1. Inspect tests page => Expected "DOES-NOT-EXIST.png" to be red in the Resources tab sidebar 2. Show Network Tab and Reload => Expected "DOES-NOT-EXIST.png to be red in the Network tab sidebar 3. Select the resource to show contents => Expected error message Notes: • WebCore attempts to decode data from a 404 response, in this case it is the HTML 404 Not Found response which produces a decode error.
Attachments
[PATCH] Proposed Fix
(14.15 KB, patch)
2017-05-02 18:14 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-05-02 18:09:18 PDT
<
rdar://problem/13222846
>
Joseph Pecoraro
Comment 2
2017-05-02 18:14:45 PDT
Created
attachment 308874
[details]
[PATCH] Proposed Fix
Matt Baker
Comment 3
2017-05-03 13:07:19 PDT
Comment on
attachment 308874
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=308874&action=review
r=me
> Source/WebCore/ChangeLog:13 > + Inline the function to make this less confusing.
This is much clearer now, nice change.
WebKit Commit Bot
Comment 4
2017-05-03 13:36:31 PDT
Comment on
attachment 308874
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 308874 Committed
r216138
: <
http://trac.webkit.org/changeset/216138
>
WebKit Commit Bot
Comment 5
2017-05-03 13:36:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug