Web Inspector: 404 Image Load does not appear as a failure in Web Inspector https://bugs.webkit.org/show_bug.cgi?id=171587 <rdar://problem/13222846>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-05-03
Reviewed by Matt Baker.

Source/WebCore:

* inspector/InspectorPageAgent.h:
* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::cachedResourceContent):
(WebCore::prepareCachedResourceBuffer): Deleted.
Inline the function to make this less confusing.

(WebCore::InspectorPageAgent::buildObjectForFrameTree):
Treat a DecodeError as a failure.

Source/WebInspectorUI:

* UserInterface/Models/Resource.js:
(WebInspector.Resource.prototype.createObjectURL):
This may return null if the data is not a Blob. This can happen if we
loaded non-base64Encoded text content for an Image. Such as a 404 response.

(WebInspector.Resource.prototype.hadLoadingError):
Consistent way to check for any kind of loading error.

(WebInspector.Resource.prototype.getImageSize):
Handle failure to create an object URL.

* UserInterface/Views/FontResourceContentView.js:
(WebInspector.FontResourceContentView.prototype.contentAvailable):
* UserInterface/Views/ImageResourceContentView.js:
(WebInspector.ImageResourceContentView.prototype.contentAvailable):
Handle failure to create an object URL.

Canonical link: https://commits.webkit.org/188524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216138 268f45cc-cd09-0410-ab3c-d52691b4dbfc